--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
  <link rel='stylesheet' href='themes/css/tabsVert.css' type='text/css' media='all' />
  <link rel='stylesheet' href='themes/css/flexy-font.css' type='text/css' media='all' />
- <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans%3A400%2C300%2C600%2C700&#038;subset=latin%2Ccyrillic&#038' type='text/css' media='all' />
+ <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans%3A400%2C300%2C600%2C700&#038;subset=latin%2Ccyrillic&#038' type='text/css' media='all' />
  <link rel='stylesheet' href='themes/css/font-awesome.min.css' type='text/css' media='all' />
  <link rel='stylesheet' href='themes/css/main.css' type='text/css' media='all' />
  </head>
